# outstanding-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEBASE_MAP.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  deploy.yml
docs/: API_REFERENCE.md  implementation_plan.md  memory_context_analysis.md
infra/: vertex-wif-config.json
scripts/: heal_venv.sh
scripts/validation/: validate_collection_email_llm_boundary.py
src/: __init__.py  main.py
src/api/: errors.py  middleware.py
src/api/routes/: gates.py  (+11 more)
src/common/: __init__.py  s3_request_attribution.py  sql_attribution.py
src/config/: constants.py  settings.py
src/engine/: __init__.py  audit.py  classifier.py  collection_chain_identifier.py  collection_chain_router.py  collection_email_event_classifier.py  collection_email_fact_extractor.py  escalation_validator.py  formatters.py  gate_evaluator.py  generator.py  generator_prompts.py  historical_collection_thread_classifier.py  persona.py  sent_scope.py  weekly_overdue_report_summarizer.py
src/evals/: metrics.py  realtime.py
src/guardrails/: __init__.py  base.py  contextual.py  entity.py  executor.py  factual_grounding.py  feedback.py  forbidden_content.py  identity_scope.py  lane_scope.py  numerical.py  overdue_terminology.py  pipeline.py  placeholder.py  policy_grounding.py  promise_reply.py  semantic_coherence.py  temporal.py  tone_clamping.py
src/lake/: __init__.py  context_evidence.py  context_hydrator.py  context_projection.py  context_reader.py  manifest_loader.py  models.py  regional_reader.py
src/llm/: _invocation_audit.py  anthropic_provider.py  aws_ecs_supplier.py  base.py  factory.py  gemini_provider.py  openai_provider.py  schemas.py  vertex_provider.py
src/prompts/: _sanitize.py  classification.py  draft_context.py  draft_generation.py  sent_scope.py
src/utils/: __init__.py  metrics.py
tests/: __init__.py  conftest.py  test_api.py  test_api_docs_exposure.py  test_aws_ecs_supplier.py  test_classifier.py  test_collection_email_event_classifier.py  test_collection_email_pipeline_endpoints.py  test_context_hydrator.py  test_context_versions.py  test_contextual_structural_checks.py  test_extracted_data_schema.py  test_gate_evaluator.py  test_generator.py  test_guardrail_severities.py  test_historical_collection_thread_classifier.py  test_invocation_audit_pii_safety.py  test_lake_manifest_loader.py  test_llm_schemas.py  test_manual_communications_prompt.py  test_openai_provider.py  test_policy_grounding_guardrail.py  test_provider_metadata.py  test_regional_lake_reader.py  test_request_deprecations.py  test_request_validation_sendable.py  test_s3_request_attribution.py  test_sent_scope.py  test_sql_attribution.py  test_usage_breakdown_attribution.py  test_vertex_provider.py
tests/test_evals/: test_realtime.py
(+20 files in other folders)
